--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.3.0",
-  "description": "A sample Node.js app using Express 4",
+  "name": "patternradio",
+  "version": "2",
+  "description": "Frontend codebase for surfacing and playing pattern radio content",
   "engines": {
     "node": "18.x"
   },
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "node test.js",
-    "sass": "nodemon --watch src/css --ext scss build.sass.js",
-    "build:dev": "nodemon --watch src/js esbuild.config.mjs",
-    "build": "node esbuild.config.mjs"
+    "css:build:dev": "nodemon --watch src/css --ext scss build.sass.js",
+    "js:build:dev": "nodemon --watch src/js esbuild.config.mjs",
+    "js:build": "node esbuild.config.mjs",
+    "js:lint": "eslint ./src/js",
+    "js:test": "node test.js"
   },
   "dependencies": {
     "@babel/core": "^7.19.1",
@@ -28,6 +29,8 @@
     "stimulus-data-bindings": "^1.3.2"
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "got": "^11.3.0",
     "nodemon": "^2.0.22",
     "sass": "^1.53.0",
@@ -35,7 +38,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/alexbowen/patternradio-frontend"
   },
   "keywords": [
     "node",
