--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "express": "^4.15.2",
     "express-history-api-fallback": "^2.2.1",
     "nunjucks": "^3.2.3",
-    "stimulus-data-bindings": "^1.3.2"
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
+    "stimulus-data-bindings": "^1.3.2",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
